Minor Layout changes

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,12 @@
     body {
       margin: 10px;
     }
+    label{
+      display: flex;
+    }
+    label input{
+      margin-right: 7px;
+    }
   </style>
 </head>
 <body>
